--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -48,6 +48,9 @@
   }
   
   @media screen and (max-width: 600px) {
+    #logo{
+      display: none;
+    }
     #contact,
     footer {
       height: 40vh;
